// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Test NoteDialog created/not created NoteDialog is not present: snapshot 1`] = `
<div
  id="portal"
>
  <li
    class="note__root"
  >
    <div
      class="note"
    >
      <div
        class="note__content"
      >
        <p
          class="note__text"
        >
          Test Text
        </p>
        <svg
          class="note__edit"
        >
          icon-edit.svg
        </svg>
      </div>
      <footer
        class="note__footer"
      >
        <figure
          aria-roledescription="author"
          class="note__author"
        >
          <div
            class="user-avatar note__user-avatar"
          >
            <div
              class="user__initials"
              title=""
            >
              NA
            </div>
          </div>
          <figcaption
            class="note__author-name"
          />
        </figure>
        <div
          class="votes note__votes"
        >
          <button
            class="dot-button dot-button__delete"
          >
            <span
              class="dot-button__folded-corner"
            />
            <span>
              3
            </span>
          </button>
          <button
            class="dot-button dot-button__add"
          >
            <svg
              class="dot-button__add-icon"
            >
              icon-add.svg
            </svg>
          </button>
        </div>
      </footer>
    </div>
    <div
      class="note__in-stack"
    />
  </li>
</div>
`;

exports[`Note Test NoteDialog created/not created NoteDialog is present: snapshot 1`] = `
<div
  id="portal"
>
  <div
    class="portal portal--darkBackground"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <div
            class="note-dialog accent-color__ note-dialog__disabled-pointer"
          >
            <h2
              class="note-dialog__header"
            />
            <div
              class="note-dialog__note"
            >
              <div
                class="note-dialog__content"
              >
                <blockquote
                  class="note-dialog__text"
                  contenteditable="false"
                >
                  Test Text
                </blockquote>
              </div>
              <footer
                class="note-dialog__footer"
              >
                <figure
                  class="note-dialog__author"
                >
                  <div
                    class="user-avatar note-dialog__user-avatar"
                  >
                    <div
                      class="user__initials"
                      title=""
                    >
                      NA
                    </div>
                  </div>
                  <figcaption
                    class="note-dialog__author-name"
                  />
                </figure>
                <div
                  class="votes note__votes"
                >
                  <button
                    class="dot-button dot-button__delete"
                  >
                    <span
                      class="dot-button__folded-corner"
                    />
                    <span>
                      3
                    </span>
                  </button>
                  <button
                    class="dot-button dot-button__add"
                  >
                    <svg
                      class="dot-button__add-icon"
                    >
                      icon-add.svg
                    </svg>
                  </button>
                </div>
              </footer>
            </div>
            <div
              class="note-dialog__note"
            >
              <div
                class="note-dialog__content"
              >
                <blockquote
                  class="note-dialog__text"
                  contenteditable="false"
                />
              </div>
              <footer
                class="note-dialog__footer"
              >
                <figure
                  class="note-dialog__author"
                >
                  <img
                    alt="User"
                    class="note-dialog__author-image"
                    src="avatar.png"
                  />
                  <figcaption
                    class="note-dialog__author-name"
                  />
                </figure>
                <div
                  class="votes note__votes"
                >
                  <button
                    class="dot-button dot-button__add"
                  >
                    <svg
                      class="dot-button__add-icon"
                    >
                      icon-add.svg
                    </svg>
                  </button>
                </div>
              </footer>
            </div>
            <div
              class="note-dialog__note"
            >
              <div
                class="note-dialog__content"
              >
                <blockquote
                  class="note-dialog__text"
                  contenteditable="false"
                />
              </div>
              <footer
                class="note-dialog__footer"
              >
                <figure
                  class="note-dialog__author"
                >
                  <img
                    alt="User"
                    class="note-dialog__author-image"
                    src="avatar.png"
                  />
                  <figcaption
                    class="note-dialog__author-name"
                  />
                </figure>
                <div
                  class="votes note__votes"
                >
                  <button
                    class="dot-button dot-button__add"
                  >
                    <svg
                      class="dot-button__add-icon"
                    >
                      icon-add.svg
                    </svg>
                  </button>
                </div>
              </footer>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <li
    class="note__root note__root-disabled-click"
  >
    <div
      class="note note__disabled-click"
    >
      <div
        class="note__content"
      >
        <p
          class="note__text"
        >
          Test Text
        </p>
        <svg
          class="note__edit"
        >
          icon-edit.svg
        </svg>
      </div>
      <footer
        class="note__footer"
      >
        <figure
          aria-roledescription="author"
          class="note__author"
        >
          <div
            class="user-avatar note__user-avatar"
          >
            <div
              class="user__initials"
              title=""
            >
              NA
            </div>
          </div>
          <figcaption
            class="note__author-name"
          />
        </figure>
        <div
          class="votes note__votes"
        >
          <button
            class="dot-button dot-button__delete"
          >
            <span
              class="dot-button__folded-corner"
            />
            <span>
              3
            </span>
          </button>
          <button
            class="dot-button dot-button__add"
          >
            <svg
              class="dot-button__add-icon"
            >
              icon-add.svg
            </svg>
          </button>
        </div>
      </footer>
    </div>
    <div
      class="note__in-stack"
    />
  </li>
</div>
`;

exports[`Note should have correct style show note with correct style 1`] = `
<li
  class="note__root"
>
  <div
    class="note"
  >
    <div
      class="note__content"
    >
      <p
        class="note__text"
      >
        Test Text
      </p>
      <svg
        class="note__edit"
      >
        icon-edit.svg
      </svg>
    </div>
    <footer
      class="note__footer"
    >
      <figure
        aria-roledescription="author"
        class="note__author"
      >
        <div
          class="user-avatar note__user-avatar"
        >
          <div
            class="user__initials"
            title=""
          >
            NA
          </div>
        </div>
        <figcaption
          class="note__author-name"
        />
      </figure>
      <div
        class="votes note__votes"
      >
        <button
          class="dot-button dot-button__delete"
        >
          <span
            class="dot-button__folded-corner"
          />
          <span>
            3
          </span>
        </button>
        <button
          class="dot-button dot-button__add"
        >
          <svg
            class="dot-button__add-icon"
          >
            icon-add.svg
          </svg>
        </button>
      </div>
    </footer>
  </div>
  <div
    class="note__in-stack"
  />
</li>
`;
